--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -9,9 +9,12 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
-
+#over_map {
+    background: white;
+    padding: 10px;
+  }
 #app {
-  height: 100%
+  height: 100%;
 }
 
 h1 {
@@ -21,15 +24,4 @@ h1 {
   padding: 10px;
   font-weight: 200;
   z-index: 10000;
-}
-
-#all-examples-info {
-  position: absolute;
-  background: white;
-  font-size: 16px;
-  padding: 20px;
-  bottom: 20px;
-  width: 350px;
-  line-height: 150%;
-  border: 1px solid rgba(0, 0, 0, .2);
 }
