added static layer of demaders and suppliers markers

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -16,7 +16,19 @@ body {
 #app {
   height: 100%;
 }
-
+#floating-panel {
+        position: absolute;
+        bottom: 15px;
+        left: 5%;
+        z-index: 5;
+        background-color: #fff;
+        padding: 5px;
+        border: 1px solid #999;
+        text-align: center;
+        font-family: 'Roboto','sans-serif';
+        line-height: 30px;
+        padding-left: 10px;
+}
 h1 {
   position: absolute;
   background: black;
